--- a/css/app.css
+++ b/css/app.css
@@ -38,7 +38,7 @@ h1 {
 }
 
 h2 {
-  font-size: 48px;
+  font-size: 32px;
   font-weight: 100;
 }
 
@@ -68,26 +68,28 @@ a {
 }
 
 .site__main {
-  margin-right: 25%;
-  background-color: #f8aeb1;
+  margin-right: 30%;
   width: 70%;
   flex: 1 auto;
   flex-direction: row;
 }
 
 .site__left-sidebar {
-  background-color: red;
   position: fixed;
   left: 0;
-  width: 20%;
-  flex: 1 auto;
+  width: 15%;
+
   height: 100%;
 }
 
 .site__content {
   width: 80%;
-  margin-left: 29%;
+  margin-left: 20%;
   flex: 1 auto;
+}
+
+.products {
+  background-color: #f8aeb1;
 }
 
 .site__right-sidebar {
@@ -115,18 +117,60 @@ a {
 }
 
 
-@media all and (min-width: 900px){
+.cart {
+  /*overflow-y: scroll;*/
+  overflow-y: scroll;
+}
+.cart__title {
+  position: fixed;
+  top: 0px;
+}
+.cart__content{
+  margin-top: 40px;
+}
+
+.cart-item {
+  height: 150px;
+  margin-bottom: 20px;
+  background: rgba(0,255,0,0.3);
+}
+
+.checkout {
+  height: 300px;
+  background: rgba(0,0,255,0.3);
+}
+
+
+
+
+
+
+
+
+
+@media all and (min-width: 1400px){
   .site__main{
+    margin-right: 20%;
+    margin-left: 5%;
     width: 80%;
   }
+  h2 {
+    font-size: 48px;
+    font-weight: 100;
+  }
+
   .site__right-sidebar{
     width: 20%;
   }
 }
 
-@media all and (max-width: 500px){
+@media all and (max-width: 650px){
   .site__main{
+    margin-right: 40%;
     width: 60%;
+  }
+  h2 {
+    font-size: 20px;
   }
   .site__right-sidebar{
     width: 40%;
